<resources>
    <string name="app_name">GROOT</string>
    <string name="registration">Registration</string>
    <string name="user_name">Username</string>
    <string name="email">Email</string>
    <string name="register">Register</string>
    <string name="password">Password</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="explore">Explore</string>
    <string name="settings">Settings</string>
    <string name="conform_password">Confirm Password</string>
    <string name="login_register_txt">Not Registered yet? Register Here</string>
    <string name="login">Login</string>
    <string name="invalid_email">Invalid Email!</string>
    <string name="invalid_password">Password must include at least 1 uppercase, 1 lowercase, 1 digit and 8 characters.</string>
    <string name="confirm_password">Confirm password must be same as password</string>
    <string name="empty_username">Username is empty</string>
    <string name="username_exists">Username already exists</string>
    <string name="signout">Sign Out</string>
    <string name="Search">Search</string>
    <string name="empty_fields">Every Field is mandatory</string>
    <string name="follow">Follow</string>
    <string name="unfollow">Unfollow</string>
    <string name="followers">Followers</string>
    <string name="following">Following</string>
    <string name="friends">Friends</string>
    <string name="no_records">No records available</string>
    <string name="no_repositories">No Repositories available</string>
    <string name="no_followers">You don\'t have any followers yet.</string>
    <string name="no_follow">You are currently not following anyone.</string>
    <string name="Starred">Starred</string>
    <string name="Repositories">Repositories</string>
    <string name="my_work">My Work</string>
    <string name="change_theme">App Theme</string>
    <string name="done">Done</string>
    <string name="cancel">Cancel</string>
    <string name="code">Code</string>
    <string name="languages">Languages</string>
    <string name="star">Star</string>
    <string name="README">README.md</string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="update_password">Update Password</string>
    <string name="same_password">Old and New Password are same</string>
    <string name="share">Invite a Friend</string>
    <string name="invitation_message">Hey! I’ve been using this amazing app and thought you might like it too.Check it out and download it here\n\n%1$s</string>
    <string name="logo_nm">GROOT</string>
    <string name="login_description">Groot is a powerful Version Control System (VCS) designed to streamline and simplify code management. It enables developers to efficiently track, manage, and collaborate on changes within their projects.</string>
    <string name="note">Note :- \nHere the Username entered must be same as that you entered using the user command on the GROOT CLI application. </string>
    <string name="register_des">Groot\'s robust architecture enables smooth collaboration, boosts productivity, and ensures secure version tracking, making it essential for modern development workflows.</string>
    <string name="title_activity_main">MainActivity</string>
</resources>