<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UserActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/topAppBar"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/md_theme_surfaceContainer"
            app:title="@string/profile"
            app:navigationIcon="@drawable/arrow_back"/>

    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:id="@+id/cardUser"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/md_theme_background"
        android:paddingHorizontal="16dp"
        android:paddingVertical="20dp"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/appBar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/profileImage"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:src="@drawable/user"
                android:layout_gravity="center_horizontal"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginHorizontal="16dp">

                <TextView
                    android:id="@+id/viewUsername"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/user_name"
                    android:textSize="30sp"
                    android:textStyle="bold"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/followersCount"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <TextView
                        android:id="@+id/followers"
                        android:text="@string/followers"
                        android:layout_marginStart="5dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <TextView
                        android:id="@+id/followingCount"
                        android:layout_marginStart="20dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <TextView
                        android:id="@+id/following"
                        android:text="@string/following"
                        android:layout_marginStart="5dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

        <androidx.appcompat.widget.AppCompatToggleButton
            android:id="@+id/btnFollow"
            android:background="@drawable/follow_button_border"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textOff="@string/follow"
            android:textOn="@string/unfollow"
            android:layout_marginTop="20dp"/>

        <com.google.android.material.button.MaterialButton
            style="@style/Widget.Material3.Button.TextButton.Icon"
            android:id="@+id/btnRepository"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/md_theme_onBackground"
            app:iconTint="@color/md_theme_onBackground"
            app:icon="@drawable/repository"
            android:text="@string/Repositories"
            app:iconPadding="16dp"
            app:iconSize="32dp"
            app:rippleColor="@color/md_theme_surfaceContainer"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:gravity="center_vertical"
            android:layout_marginVertical="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/myWorkText" />

        <com.google.android.material.button.MaterialButton
            style="@style/Widget.Material3.Button.TextButton.Icon"
            android:id="@+id/btnStarred"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:icon="@drawable/starred"
            android:text="@string/Starred"
            app:iconSize="32dp"
            app:iconPadding="16dp"
            app:iconTint="@color/md_theme_onBackground"
            app:rippleColor="@color/md_theme_surfaceContainer"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@color/md_theme_onBackground"
            android:layout_marginBottom="16dp"
            android:gravity="center_vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnRepository" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>