<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#EEEEF0"
    tools:context=".RegistrationActivity">

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="90dp"
        android:layout_height="90dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.053"
        tools:srcCompat="@tools:sample/avatars" />

    <androidx.cardview.widget.CardView
        android:layout_width="350dp"
        android:layout_height="500dp"
        android:backgroundTint="#EEEEF0"
        app:cardCornerRadius="50dp"
        app:cardElevation="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.637">

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:srcCompat="@drawable/card_border" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/registration"
            android:layout_marginStart="100dp"
            android:layout_marginTop="20dp"
            android:fontFamily="monospace"
            android:textAlignment="center"
            android:textSize="22sp"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user_name"
            android:textStyle="bold"
            android:textSize="18sp"
            android:fontFamily="monospace"
            android:textColor="@color/black"
            android:layout_marginStart="30dp"
            android:layout_marginTop="70dp"/>

        <EditText
            android:id="@+id/rg_username"
            android:layout_width="290dp"
            android:layout_height="50dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="100dp"
            android:background="@drawable/card_border"
            android:ems="10"
            android:hint="@string/user_name"
            android:inputType="text"
            android:paddingLeft="15dp"
            android:textColor="#7359BE" />
        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="160dp"
            android:fontFamily="monospace"
            android:text="Email-ID"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/rg_email"
            android:layout_width="290dp"
            android:layout_height="50dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="190dp"
            android:background="@drawable/card_border"
            android:ems="10"
            android:hint="@string/e_mail"
            android:inputType="textEmailAddress"
            android:paddingLeft="15dp"
            android:textColor="#7359BE"/>

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="250dp"
            android:fontFamily="monospace"
            android:text="@string/password"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/rg_password"
            android:layout_width="290dp"
            android:layout_height="50dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="280dp"
            android:background="@drawable/card_border"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:paddingLeft="15dp"
            android:textColor="#7359BE"/>
        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="340dp"
            android:fontFamily="monospace"
            android:text="@string/conform_password"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/rg_con_password"
            android:layout_width="290dp"
            android:layout_height="50dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="370dp"
            android:background="@drawable/card_border"
            android:ems="10"
            android:hint="@string/conform_password"
            android:inputType="textPassword"
            android:paddingLeft="15dp"
            android:textColor="#7359BE"/>

        <Button
            android:id="@+id/rg_Register"
            android:layout_width="250dp"
            android:layout_height="60dp"
            android:layout_marginStart="50dp"
            android:layout_marginTop="425dp"
            android:backgroundTint="@color/black"
            android:text="@string/register"
            android:textSize="20sp" />

    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>